# Editor65

./: CMakeLists.txt  README.md  build.sh  install.sh  main.cpp  run.sh
src/: Editor65.c
